--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
         <title><Ryans Portfolio</title>
     </head>
     <body>
+        <table>
+            <tbody>
+                <tr>
+                    <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> </td>
+                    <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"> </td>
+                    <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"> </td>
+                    <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png"> </td>
 
-<h1> Welcome to Ryan's Programming Portfolio </h1>
+    <h1> Welcome to Ryan's Programming Portfolio </h1>
     </body>
 </html>
