--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
                     <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"> </td>
                     <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"> </td>
                     <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png"> </td>
+                </tr>
+            </tbody>
+        </table>
 
     <h1> Welcome to Ryan's Programming Portfolio </h1>
     </body>
