--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
             </tbody>
         </table>
 
-    <h1> Welcome to Ryan's Programming Portfolio </h1>
+        <p> <br> Welcome to Ryan's Programming Portfolio </br> </p>
     </body>
 </html>
