--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title><Ryans Portfolio</title>
     </head>
     <body>
-        <table>
+        <table cellspacing="20">
             <tbody>
                 <tr>
                     <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> </td>
