--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <title><Ryans Portfolio</title>
     </head>
     <body>
-        <table cellspacing="20">
+        <table>
             <tbody>
-                <tr>
+                <tr cellspace="20">
                     <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> </td>
                     <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"> </td>
                     <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"> </td>
@@ -18,5 +18,7 @@
         </table>
 
         <p> <br> Welcome to Ryan's Programming Portfolio </br> </p>
+    
+        <p> My name is Ryan Wills, and this is my Programming Portfolio. 
     </body>
 </html>
