--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
     <body>
 
-        <p> <br> Welcome to Ryan's Programming Portfolio </br> </p>
+        <h1> Welcome to Ryan's Programming Portfolio </h1>
     
         <p> My name is Ryan Wills, and this is my Programming Portfolio. 
     </body>
