--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     <body>
         <h1> Welcome to Ryan's Programming Portfolio </h1>
     
-        <p> My name is Ryan Wills, and this is my Programming Portfolio. 
+        <p> My name is Ryan Wills, and this is my Programming Portfolio for the CSC106 Computer Programming course at The University of Rhode Island. 
     </body>
 </html>
