--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <body>
         <h1> Welcome to Ryan's Programming Portfolio </h1>
     
-        <p> My name is Ryan Wills, and this is my Programming Portfolio for the CSC106 Computer Programming course at The University of Rhode Island. This website will give you a look into the projects completed in this course, including my javascripts and apps, also with some facts about myself. </p>
+        <p> My name is Ryan Wills, and this is my Programming Portfolio for the CSC106 Computer Programming course 
+            at The University of Rhode Island. This website will give you a look into the projects completed in this 
+            course, including my javascripts and apps, also with some facts about myself. </p>
         
     </body>
 </html>
