Update and rename javascripts to javascripts.html

--- a/javascripts.html
+++ b/javascripts.html
@@ -40,7 +40,8 @@
 
     
 
-        <p> This page contains the resources to my javascript apps that were written and coded fully using the tools from khan academy. 
+        <p> This page contains the resources to my javascript apps that were written <br>
+        and coded fully using the tools from khan academy. </p>
         
 
     </body>
