--- a/apps.html
+++ b/apps.html
@@ -20,7 +20,7 @@
     <body>
         <h1> Ryan's Apps </h1>
 
-        <p> This page contains the resources to my apps that were written and coded fully using the tools from khan academy. 
+        <p> This page contains the resources to my apps that were written and coded fully using the tools from khan academy. </p>
 
     
     </body>
