--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <table cellspace="40">
             <tbody>
                 <tr>
-                     <a target="_blank" href="https://ryanwills34.github.io/index"> <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> </td> </a>
+                     <a target="_blank" href="https://ryanwills34.github.io/index"> 
+                         <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> </td> 
+                    </a>
                     <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"> </td>
                     <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"> </td>
                     <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png"> </td>
