--- a/aboutme.html
+++ b/aboutme.html
@@ -4,10 +4,18 @@
         <table cellspace="40">
             <tbody>
                 <tr>
-                    <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> </td>
+                        <a target="_blank" href="https://ryanwills34.github.io/index"> 
+                         <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> </td> 
+                    </a>
+                     <a target="_blank" href="https://ryanwills34.github.io/javascripts"> 
                     <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"> </td>
+                    </a>
+                    <a target="_blank" href="https://ryanwills34.github.io/apps">
                     <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"> </td>
+                    </a>
+                    <a target="_blank" href="https://ryanwills34.github.io/aboutme">
                     <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png"> </td>
+                    </a>
                 </tr>
             </tbody>
         </table>
