--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
         <table cellspace="40">
             <tbody>
                 <tr>
-                     <a target="_blank" href="https://ryanwills34.github.io/index"> 
-                         <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> </td> 
+                     <a href="https://ryanwills34.github.io/index"> 
+                         <th> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> </td> 
                     </a>
-                     <a target="_blank" href="https://ryanwills34.github.io/javascripts"> 
+                     <a href="https://ryanwills34.github.io/javascripts"> 
                     <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"> </td>
                     </a>
-                    <a target="_blank" href="https://ryanwills34.github.io/apps">
+                    <a href="https://ryanwills34.github.io/apps">
                     <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"> </td>
                     </a>
-                    <a target="_blank" href="https://ryanwills34.github.io/aboutme">
+                    <a href="https://ryanwills34.github.io/aboutme">
                     <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png"> </td>
                     </a>
                 </tr>
