--- a/apps.html
+++ b/apps.html
@@ -6,16 +6,16 @@
         <table cellspace="40">
             <tbody>
                 <tr>
-                    <th> <a href="https://ryanwills34.github.io/index"> 
+                    <th> <a href="index.html"> 
                           <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> 
                          </a> </th>
-                     <th> <a href="https://ryanwills34.github.io/javascripts"> 
+                     <th> <a href="javascripts.html"> 
                      <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"> 
                          </a> </th>
-                    <th> <a href="https://ryanwills34.github.io/apps">
+                    <th> <a href="apps.html">
                     <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"> 
                         </a> </th>
-                   <th> <a href="https://ryanwills34.github.io/aboutme">
+                   <th> <a href="aboutme.html">
                      <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png"> 
                        </a> </th>
                 </tr>
