--- a/javascripts.html
+++ b/javascripts.html
@@ -1,54 +1,34 @@
 
-
 <!DOCTYPE html>
-
 <html>
-
     <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/csc106_banner.jpg">
-
         <table cellspace="40">
-
             <tbody>
-
                 <tr>
-
-                       <a target="_blank" href="https://ryanwills34.github.io/index"> 
-                         <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> </td> 
-                    </a>
-                     <a target="_blank" href="https://ryanwills34.github.io/javascripts"> 
-                    <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"> </td>
-                    </a>
-                    <a target="_blank" href="https://ryanwills34.github.io/apps">
-                    <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"> </td>
-                    </a>
-                    <a target="_blank" href="https://ryanwills34.github.io/aboutme">
-                    <td> <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png"> </td>
-                    </a>
-
+                    <th> <a href="index.html"> 
+                          <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> 
+                         </a> </th>
+                     <th> <a href="javascripts.html"> 
+                     <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"> 
+                         </a> </th>
+                    <th> <a href="apps.html">
+                    <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"> 
+                        </a> </th>
+                   <th> <a href="aboutme.html">
+                     <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png"> 
+                       </a> </th>
                 </tr>
-
             </tbody>
-
         </table>
-
     <head>
-
         <meta charset="utf-8">
-
         <title><Ryans Portfolio</title>
-
     </head>
-
     <body>
-
         <h1> Ryan's Javascript Programs </h1>
-
-    
-
+   
         <p> This page contains the resources to my javascript apps that were written <br>
         and coded fully using the tools from khan academy. </p>
         
-
     </body>
-
 </html>
