--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <meta charset="utf-8">
         <title><Ryans Portfolio</title>
             body {
-                background-color: #00CED1;
+                background-color: 00CED1;
             }
             
            
