--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
     <head>
         <meta charset="utf-8">
         <title><Ryans Portfolio</title>
-            body {
-                background-color: 00CED1;
+        <style>
+           body {
+               background-color: #00CED1
             }
             
            
