--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                background-color: #00CED1
             }
             </style> 
+            h1 {
+                color: #000000;
+            }
     </head>
     <body>
         
