--- a/aboutme.html
+++ b/aboutme.html
@@ -22,6 +22,14 @@
     <head>
         <meta charset="utf-8">
         <title><Ryans Portfolio</title>
+            <style>
+           body {
+               background-color: #00CED1
+            }
+            </style> 
+            h1 {
+                color: #000000;
+            }
     </head>
     <body
         <h1> About Me </h1>
