--- a/apps.html
+++ b/apps.html
@@ -24,6 +24,11 @@
     <head>
         <meta charset="utf-8">
         <title><Ryans Portfolio</title>
+            <style>
+           body {
+               background-color: #00CED1
+            }
+            </style>
     </head>
     <body>
         <h1> Ryan's Apps </h1>
