--- a/javascripts.html
+++ b/javascripts.html
@@ -23,6 +23,11 @@
     <head>
         <meta charset="utf-8">
         <title><Ryans Portfolio</title>
+        <style>
+           body {
+               background-color: #00CED1
+            }
+            </style>
     </head>
     <body>
         <h1> Ryan's Javascript Programs </h1>
