--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </head>
     <body>
         
-        <h1> Welcome to Ryan's Programming Portfolio </h1>
+        <h1> Welcome to Ryan's Programming Portfolio! </h1>
     
         <p> My name is Ryan Wills, and this is my Programming Portfolio for the CSC106 Computer Programming course at the <br>
             University of Rhode Island. This website will give you a look into the projects completed in this course, including <br>
