--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <table cellspace="40">
             <tbody>
                 <tr>
-                     <th> <a href="index.html"> 
+                     <th id="home"> <a href="index.html"> 
                           <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> 
                          </a> </th>
                      <th> <a href="javascripts.html"> 
@@ -27,6 +27,11 @@
                background-color: #00CED1
             }
             </style> 
+            
+            #home {
+                margin-right: 10px;
+                margin-left: 10px;
+            }
     </head>
     <body>
         
