--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             }
             </style> 
             
-            #home {
+            home {
                 margin-right: 10px;
                 margin-left: 10px;
             }
