--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
                      <th id="home"> <a href="index.html"> 
                           <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> 
                          </a> </th>
-                     <th> <a href="javascripts.html"> 
+                     <th id="javascript"> <a href="javascripts.html"> 
                      <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"> 
                          </a> </th>
-                    <th> <a href="apps.html">
+                    <th id="apps"> <a href="apps.html">
                     <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"> 
                         </a> </th>
-                   <th> <a href="aboutme.html">
+                   <th id="aboutme"> <a href="aboutme.html">
                      <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png"> 
                        </a> </th>
                 </tr>
