--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <table cellspace="40">
             <tbody>
                 <tr>
-                     <th id="home"> <a href="index.html"> 
+                     <th id="index-button"> <a href="index.html"> 
                           <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> 
                          </a> </th>
                      <th id="javascript"> <a href="javascripts.html"> 
@@ -27,7 +27,7 @@
                background-color: #00CED1
             }
             
-           home {
+           #index-button {
                 margin-right: 100px;
                 margin-left: 100px;
             }
