--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
            #index-button {
                margin-right: 100px;
                margin-left: 100px;
+               float: left;
             }  
            #javascript-button {
                margin-right: 100px;
                margin-left: 100px;
+               float: left;
             }
             </style>
     </head>
