--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                background-color: #00CED1
             }
            #index-button {
-               margin-right: 100px;
-               margin-left: 100px;
+               margin-right: 100;
+               margin-left: 100;
                float: left;
             }  
            #javascript-button {
-               margin-right: 100px;
-               margin-left: 100px;
+               margin-right: 100;
+               margin-left: 100;
                float: left;
             }
             </style>
