--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                background-color: #00CED1
             }
            #index-button {
-               margin-right: 50;
-               margin-left: 50;
+               margin-right: 50px;
+               margin-left: 50px;
                float: left;
             }  
            #javascript-button {
-               margin-right: 50;
-               margin-left: 50;
+               margin-right: 50px;
+               margin-left: 50px;
                float: left;
             }
             </style>
