--- a/index.html
+++ b/index.html
@@ -27,14 +27,13 @@
                background-color: #00CED1
             }
            #index-button {
-               margin-right: 50px;
-               margin-left: 50px;
+               margin-right: 500;
+               margin-left: 500;
                float: left;
             }  
            #javascript-button {
-               margin-right: 50px;
-               margin-left: 50px;
-               float: left;
+               margin-right: 500;
+               margin-left: 500
             }
             </style>
     </head>
