--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             }  
            #javascript-button {
                margin-right: 300;
-               margin-left: 300
+               margin-left: 300;
             }
             </style>
     </head>
