--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
                background-color: #00CED1
             }
            #index-button {
-               margin-right: 300;
-               margin-left: 300;
+               margin-right: 400;
+               margin-left: 400;
                float: left;
             }  
            #javascript-button {
-               margin-right: 300;
-               margin-left: 300;
+               margin-right: 400;
+               margin-left: 400;
+               float: left;
             }
             </style>
     </head>
