--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                background-color: #00CED1
             }
            #index-button {
-               margin-right: 400;
-               margin-left: 400;
+               margin-right: 400px;
+               margin-left: 400px;
                float: left;
             }  
            #javascript-button {
-               margin-right: 400;
-               margin-left: 400;
+               margin-right: 400px;
+               margin-left: 400px;
                float: left;
             }
             </style>
