--- a/index.html
+++ b/index.html
@@ -27,14 +27,12 @@
                background-color: #00CED1
             }
            #index-button {
-               margin-right: 400px;
-               margin-left: 400px;
-               float: left;
+               margin-right: 400;
+               margin-left: 400;
             }  
            #javascript-button {
-               margin-right: 400px;
-               margin-left: 400px;
-               float: left;
+               margin-right: 400;
+               margin-left: 400;
             }
             </style>
     </head>
