--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
                background-color: #00CED1
             }
            #index-button {
-               margin-right: 100px;
-               margin-left: 100px;
+               margin-right: 100;
+               margin-left: 100;
             }  
            #javascript-button {
-               margin-right: 100px;
-               margin-left: 100px;
+               margin-right: 100;
+               margin-left: 100;
             }
             </style>
     </head>
