--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
                background-color: #00CED1
             }
            #index-button {
+               float: left;
                margin-right: 100;
                margin-left: 100;
             }  
            #javascript-button {
+               float: left;
                margin-right: 100;
                margin-left: 100;
             }
