--- a/index.html
+++ b/index.html
@@ -27,14 +27,16 @@
                background-color: #00CED1
             }
            #index-button {
+               width: 100px;
                float: left;
-               margin-right: 100;
-               margin-left: 100;
+               margin-right: 100px;
+               margin-left: 100px;
             }  
            #javascript-button {
+               width: 100px;
                float: left;
-               margin-right: 100;
-               margin-left: 100;
+               margin-right: 100px;
+               margin-left: 100px;
             }
             </style>
     </head>
