--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@
                margin-right: 100;
                margin-left: 100;
             }
+            #apps-button {
+                width: 100;
+                float: left;
+                margin-right: 100;
+                margin-left: 100;
+            }
+            #aboutme-button {
+                width: 100;
+                float: left;
+                margin-right: 100;
+                margin-left: 100;
+            }
             </style>
     </head>
     <body>
