--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             }
             #aboutme-button {
                 width: 60;
-                float: left;
+                float: right;
                 margin-right: 60;
                 margin-left: 60;
             }
