--- a/index.html
+++ b/index.html
@@ -27,28 +27,28 @@
                background-color: #00CED1
             }
            #index-button {
-               width: 60px;
+               width: "60";
                float: left;
-               margin-right: 60px;
-               margin-left: 60px;
+               margin-right: "60";
+               margin-left: "60";
             }  
            #javascript-button {
-               width: 60px;
+               width: "60";
                float: left;
-               margin-right: 60px;
-               margin-left: 60px;
+               margin-right: "60";
+               margin-left: "60";
             }
             #apps-button {
-                width: 60px;
+                width: "60";
                 float: left;
-                margin-right: 60px;
-                margin-left: 60px;
+                margin-right: "60";
+                margin-left: "60";
             }
             #aboutme-button {
-                width: 60px;
+                width: "60";
                 float: right;
-                margin-right: 60px;
-                margin-left: 60px;
+                margin-right: "60";
+                margin-left: "60";
             }
             </style>
     </head>
