--- a/index.html
+++ b/index.html
@@ -27,28 +27,28 @@
                background-color: #00CED1
             }
            #index-button {
-               width: "60";
+               width: "50";
                float: left;
-               margin-right: "60";
-               margin-left: "60";
+               margin-right: "50";
+               margin-left: "50";
             }  
            #javascript-button {
-               width: "60";
+               width: "50";
                float: left;
-               margin-right: "60";
-               margin-left: "60";
+               margin-right: "50";
+               margin-left: "50";
             }
             #apps-button {
-                width: "60";
+                width: "50";
                 float: left;
-                margin-right: "60";
-                margin-left: "60";
+                margin-right: "50";
+                margin-left: "50";
             }
             #aboutme-button {
-                width: "60";
-                float: right;
-                margin-right: "60";
-                margin-left: "60";
+                width: "50";
+                float: left;
+                margin-right: "50";
+                margin-left: "50";
             }
             </style>
     </head>
