--- a/index.html
+++ b/index.html
@@ -27,28 +27,28 @@
                background-color: #00CED1
             }
            #index-button {
-               width: "50";
+               width: 50;
                float: left;
-               margin-right: "50";
-               margin-left: "50";
+               margin-right: 50;
+               margin-left: 50;
             }  
            #javascript-button {
-               width: "50";
+               width: 50;
                float: left;
-               margin-right: "50";
-               margin-left: "50";
+               margin-right: 50;
+               margin-left: 50;
             }
             #apps-button {
-                width: "50";
+                width: 50;
                 float: left;
-                margin-right: "50";
-                margin-left: "50";
+                margin-right: 50;
+                margin-left: 50;
             }
             #aboutme-button {
-                width: "50";
+                width: 50;
                 float: left;
-                margin-right: "50";
-                margin-left: "50";
+                margin-right: 50;
+                margin-left: 50;
             }
             </style>
     </head>
