--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                background-color: #00CED1
             }
            #index-button {
-               width: 50px;
+               width: 50;
                float: left;
-               margin-right: 50px;
-               margin-left: 50px;
+               margin-right: 50;
+               margin-left: 50;
             }  
            #javascript-button {
                width: 50;
