--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/csc106_banner.jpg">
-        <table cellspace="40">
+        <table>
             <tbody>
                 <tr>
                      <th id="index-button"> <a href="index.html"> 
@@ -28,23 +28,23 @@
             }
            #index-button {
                float: left;
-               margin-right: 50;
-               margin-left: 50;
+               margin-right: 30;
+               margin-left: 30;
             }  
            #javascript-button {
                float: left;
-               margin-right: 50;
-               margin-left: 50;
+               margin-right: 30;
+               margin-left: 30;
             }
             #apps-button {
                 float: left;
-                margin-right: 50;
-                margin-left: 50;
+                margin-right: 30;
+                margin-left: 30;
             }
             #aboutme-button {
                 float: left;
-                margin-right: 50;
-                margin-left: 50;
+                margin-right: 30;
+                margin-left: 30;
             }
             </style>
     </head>
