--- a/index.html
+++ b/index.html
@@ -28,23 +28,23 @@
             }
            #index-button {
                float: left;
-               margin-right: 30;
-               margin-left: 30;
+               margin-right: 20px;
+               margin-left: 20px;
             }  
            #javascript-button {
                float: left;
-               margin-right: 30;
-               margin-left: 30;
+               margin-right: 20px;
+               margin-left: 20px;
             }
             #apps-button {
                 float: left;
-                margin-right: 30;
-                margin-left: 30;
+                margin-right: 20px;
+                margin-left: 20px;
             }
             #aboutme-button {
                 float: left;
-                margin-right: 30;
-                margin-left: 30;
+                margin-right: 20px;
+                margin-left: 20px;
             }
             </style>
     </head>
