--- a/apps.html
+++ b/apps.html
@@ -6,16 +6,16 @@
         <table cellspace="40">
             <tbody>
                 <tr>
-                    <th> <a href="index.html"> 
+                    <th id="index-button"> <a href="index.html"> 
                           <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> 
                          </a> </th>
-                     <th> <a href="javascripts.html"> 
+                     <th id="javascript-button"> <a href="javascripts.html"> 
                      <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"> 
                          </a> </th>
-                    <th> <a href="apps.html">
+                    <th id="apps-button"> <a href="apps.html">
                     <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"> 
                         </a> </th>
-                   <th> <a href="aboutme.html">
+                   <th id="aboutme-button"> <a href="aboutme.html">
                      <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png"> 
                        </a> </th>
                 </tr>
@@ -27,6 +27,26 @@
             <style>
            body {
                background-color: #00CED1
+            }
+            #index-button {
+               float: left;
+               margin-right: 20;
+               margin-left: 20;
+            }  
+           #javascript-button {
+               float: left;
+               margin-right: 20;
+               margin-left: 20;
+            }
+            #apps-button {
+                float: left;
+                margin-right: 20;
+                margin-left: 20;
+            }
+            #aboutme-button {
+                float: left;
+                margin-right: 20;
+                margin-left: 20;
             }
             </style>
     </head>
