--- a/apps.html
+++ b/apps.html
@@ -30,23 +30,23 @@
             }
             #index-button {
                float: left;
-               margin-right: 20;
-               margin-left: 20;
+               margin-right: 20px;
+               margin-left: 20px;
             }  
            #javascript-button {
                float: left;
-               margin-right: 20;
-               margin-left: 20;
+               margin-right: 20px;
+               margin-left: 20px;
             }
             #apps-button {
                 float: left;
-                margin-right: 20;
-                margin-left: 20;
+                margin-right: 20px;
+                margin-left: 20px;
             }
             #aboutme-button {
                 float: left;
-                margin-right: 20;
-                margin-left: 20;
+                margin-right: 20px;
+                margin-left: 20px;
             }
             </style>
     </head>
