--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
                           <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> 
                          </a> </th>
                      <th id="javascript-button"> <a href="javascripts.html"> 
-                     <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"> 
+                     <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png" hspace="20"> 
                          </a> </th>
                     <th id="apps-button"> <a href="apps.html">
                     <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"> 
