--- a/apps.html
+++ b/apps.html
@@ -7,16 +7,16 @@
             <tbody>
                 <tr>
                     <th id="index-button"> <a href="index.html"> 
-                          <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> 
+                          <img hspace="50" src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> 
                          </a> </th>
                      <th id="javascript-button"> <a href="javascripts.html"> 
-                     <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"> 
+                     <img hspace="50" src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"> 
                          </a> </th>
                     <th id="apps-button"> <a href="apps.html">
-                    <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"> 
+                    <img hspace="50" src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"> 
                         </a> </th>
                    <th id="aboutme-button"> <a href="aboutme.html">
-                     <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png"> 
+                     <img hspace="50" src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png"> 
                        </a> </th>
                 </tr>
             </tbody>
@@ -27,22 +27,6 @@
             <style>
            body {
                background-color: #00CED1
-            }
-            #index-button {
-               margin-right: 20;
-               margin-left: 20;
-            }  
-           #javascript-button {
-               margin-right: 20;
-               margin-left: 20;
-            }
-            #apps-button {
-                margin-right: 20;
-                margin-left: 20;
-            }
-            #aboutme-button {
-                margin-right: 20;
-                margin-left: 20;
             }
             </style>
     </head>
