--- a/aboutme.html
+++ b/aboutme.html
@@ -5,16 +5,16 @@
             <tbody>
                 <tr>
                         <th> <a href="https://ryanwills34.github.io/index"> 
-                          <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> 
+                          <img hspace="50" src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> 
                          </a> </th>
                      <th> <a href="https://ryanwills34.github.io/javascripts"> 
-                     <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"> 
+                     <img hspace="50" src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"> 
                          </a> </th>
                     <th> <a href="https://ryanwills34.github.io/apps">
-                    <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"> 
+                    <img hspace="50" src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"> 
                         </a> </th>
                    <th> <a href="https://ryanwills34.github.io/aboutme">
-                     <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png"> 
+                     <img hspace="50" src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png"> 
                        </a> </th>
                 </tr>
             </tbody>
