--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
         <table>
             <tbody>
                 <tr>
-                     <th id="index-button"> <a href="index"> 
+                     <th id="index-button"> <a href="https://ryanwills34.github.io/index"> 
                           <img hspace="30" src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> 
                          </a> </th>
-                     <th id="javascript-button"> <a href="javascripts"> 
+                     <th id="javascript-button"> <a href="https://ryanwills34.github.io/javascripts"> 
                      <img hspace="30" src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"> 
                          </a> </th>
-                    <th id="apps-button"> <a href="apps">
+                    <th id="apps-button"> <a href="https://ryanwills34.github.io/apps">
                     <img hspace="30" src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"> 
                         </a> </th>
-                   <th id="aboutme-button"> <a href="aboutme">
+                   <th id="aboutme-button"> <a href="https://ryanwills34.github.io/aboutme">
                      <img hspace="30" src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png"> 
                        </a> </th>
                 </tr>
