--- a/javascripts.html
+++ b/javascripts.html
@@ -6,16 +6,16 @@
             <tbody>
                 <tr>
                     <th> <a href="index.html"> 
-                          <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> 
+                          <img hspace="25" src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> 
                          </a> </th>
                      <th> <a href="javascripts.html"> 
-                     <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"> 
+                     <img hspace="25" src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"> 
                          </a> </th>
                     <th> <a href="apps.html">
-                    <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"> 
+                    <img hspace="25" src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"> 
                         </a> </th>
                    <th> <a href="aboutme.html">
-                     <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png"> 
+                     <img hspace="25" src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png"> 
                        </a> </th>
                 </tr>
             </tbody>
