--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
             <tbody>
                 <tr>
                      <th id="index-button"> <a href="https://ryanwills34.github.io/index"> 
-                          <img hspace="25" src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/home.png"> 
+                          <img hspace="25" src="home.png"> 
                          </a> </th>
                      <th id="javascript-button"> <a href="https://ryanwills34.github.io/javascripts"> 
-                     <img hspace="25" src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/javascripts.png"> 
+                     <img hspace="25" src="java.png"> 
                          </a> </th>
                     <th id="apps-button"> <a href="https://ryanwills34.github.io/apps">
-                    <img hspace="25" src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/apps.png"> 
+                    <img hspace="25" src="apps.png"> 
                         </a> </th>
                    <th id="aboutme-button"> <a href="https://ryanwills34.github.io/aboutme">
-                     <img hspace="25" src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/about.png"> 
+                     <img hspace="25" src="aboutme.png"> 
                        </a> </th>
                 </tr>
             </tbody>
