--- a/aboutme.html
+++ b/aboutme.html
@@ -4,16 +4,16 @@
         <table cellspace="40">
             <tbody>
                 <tr>
-                        <th> <a href="https://ryanwills34.github.io/index"> 
+                        <th> <a href="https://ryanwills34.github.io/index.html"> 
                           <img hspace="25" src="home.png"> 
                          </a> </th>
-                     <th> <a href="https://ryanwills34.github.io/javascripts"> 
+                     <th> <a href="https://ryanwills34.github.io/javascripts.html"> 
                      <img hspace="25" src="java.png"> 
                          </a> </th>
-                    <th> <a href="https://ryanwills34.github.io/apps">
+                    <th> <a href="https://ryanwills34.github.io/apps.html">
                     <img hspace="25" src="apps.png"> 
                         </a> </th>
-                   <th> <a href="https://ryanwills34.github.io/aboutme">
+                   <th> <a href="https://ryanwills34.github.io/aboutme.html">
                      <img hspace="25" src="aboutme.png"> 
                        </a> </th>
                 </tr>
