--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
         <table>
             <tbody>
                 <tr>
-                     <th id="index-button"> <a href="https://ryanwills34.github.io/index"> 
+                     <th id="index-button"> <a href="index.html">
                           <img hspace="25" src="home.png"> 
                          </a> </th>
-                     <th id="javascript-button"> <a href="https://ryanwills34.github.io/javascripts"> 
+                     <th id="javascript-button"> <a href="javascripts.html">
                      <img hspace="25" src="java.png"> 
                          </a> </th>
-                    <th id="apps-button"> <a href="https://ryanwills34.github.io/apps">
+                    <th id="apps-button"> <a href="apps.html">
                     <img hspace="25" src="apps.png"> 
                         </a> </th>
-                   <th id="aboutme-button"> <a href="https://ryanwills34.github.io/aboutme">
+                   <th id="aboutme-button"> <a href="aboutme.html">
                      <img hspace="25" src="aboutme.png"> 
                        </a> </th>
                 </tr>
