--- a/javascripts.html
+++ b/javascripts.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html>
-    <img src="http://students.cs.uri.edu/~forensics/courses/CSC106/assignments/portfolio_example/csc106_banner.jpg">
+    <img src="BannerCSC.png">
         <table cellspace="40">
             <tbody>
                 <tr>
