--- a/aboutme.html
+++ b/aboutme.html
@@ -26,7 +26,12 @@
            body {
                background-color: #00CED1
             }
+           #RyanandSister {
+               width: 100;
+               float: left;
+               
             </style> 
+         
     </head>
     <body
         <h1> About Me </h1>
