--- a/aboutme.html
+++ b/aboutme.html
@@ -36,7 +36,7 @@
         I am from West Warwick, Rhode Island. I am a huge fan of football, and I also love computers and the <br>
         way they work. I have built a couple computers myself and am very fascinated by them. </p>
     
-    <img width=30% id="RyanandCraine" src="mecraineglasses1.png">
+    <img width=30 id="RyanandCraine" src="mecraineglasses1.png">
 
        
     </body>
