--- a/aboutme.html
+++ b/aboutme.html
@@ -41,6 +41,9 @@
                 <th>
                     <img width=10% src="mecraineglasses1.png">
                 </th>
+            </tr>
+        </tbody>
+    </table>
                     
     
 
