--- a/aboutme.html
+++ b/aboutme.html
@@ -39,7 +39,7 @@
         <tbody>
             <tr>
                 <th>
-                    <img width=50% src="mecraineglasses1.png">
+                    <a> <img src="mecraineglasses1.png"> </a>
                 </th>
             </tr>
         </tbody>
