--- a/aboutme.html
+++ b/aboutme.html
@@ -35,15 +35,8 @@
         <p> My name is Ryan Wills. I am currently a student in the CSC106 Computer Programming course. <br>
         I am from West Warwick, Rhode Island. I am a huge fan of football, and I also love computers and the <br>
         way they work. I have built a couple computers myself and am very fascinated by them. </p>
-    <table>
-        <tbody>
-            <tr>
-                <th>
-                    <a> <img src="mecraineglasses1.png"> </a>
-                </th>
-            </tr>
-        </tbody>
-    </table>
+   
+    <img src="mecraineglasses1.png" width=15%>
                     
     
 
