--- a/aboutme.html
+++ b/aboutme.html
@@ -36,6 +36,6 @@
         I am from West Warwick, Rhode Island. I am a huge fan of football, and I also love computers and the <br>
         way they work. I have built a couple computers myself and am very fascinated by them. </p>
    
-    <img src="mecraineglasses1.png" width=20%>
+    <img src="snowboarding.png" width=20%>
     </body>
 </html>
