--- a/aboutme.html
+++ b/aboutme.html
@@ -37,6 +37,6 @@
         way they work. I have built a couple computers myself and am very fascinated by them. </p>
    
     <img src="snowboarding.png" width=10%>
-    <img src="mefootball.png" width=2%>
+    <img hspace="10" src="mefootball.png" width=2%>
     </body>
 </html>
