--- a/aboutme.html
+++ b/aboutme.html
@@ -37,6 +37,7 @@
         way they work. I have built a couple computers myself and am very fascinated by them. </p>
    
     <img src="snowboarding.png" width=10%>
-    <img hspace="10" src="footballG.png" width=15%>
+    <img hspace="10" src="footballG.png" width=13%>
+    <img hspace="10" src="Tandme.png" width=15%>
     </body>
 </html>
