--- a/aboutme.html
+++ b/aboutme.html
@@ -38,6 +38,7 @@
    
     <img src="snowboarding.png" width=10%>
     <img hspace="10" src="footballG.png" width=13%>
-    <img hspace="10" src="Tandme.png" width=15%>
+    <img hspace="10" src="Tandme.png" width=15%> <br>
+    <img hspace="100" src="meandrcraineglasses.png" width=25%>
     </body>
 </html>
