--- a/aboutme.html
+++ b/aboutme.html
@@ -30,7 +30,7 @@
          
     </head>
     <body
-          <h1> About Me </h1>
+          <h1> <b> About Me <b> </h1>
 
         <p> My name is Ryan Wills. I am currently a student in the CSC106 Computer Programming course. <br>
         I am from West Warwick, Rhode Island. I am a huge fan of football, and I also love computers and the <br>
