--- a/javascripts.html
+++ b/javascripts.html
@@ -35,5 +35,7 @@
         <p> This page contains the resources to my javascript apps that were written <br>
         and coded fully using the tools from khan academy. </p>
         
+        <a href"https://www.khanacademy.org/computer-programming/csc106-bitmoji/5197970864308224"> </a>
+        
     </body>
 </html>
