--- a/final.html
+++ b/final.html
@@ -17,7 +17,8 @@
                      <img hspace="25" src="aboutme.png"> 
                        </a> </th>
                        <th> < href="https://ryanwills34.github.io/final.html">
-                       <img hspace="25" src="
+                       <img hspace="25" src="final.jpg">
+                           </a> </th>
                 </tr>
             </tbody>
         </table>
